[gd_scene load_steps=5 format=3 uid="uid://qcubmca6b8sy"]

[ext_resource type="Script" path="res://user-interface/oxygen-bar/oxygen_bar.gd" id="1_77erm"]
[ext_resource type="Texture2D" uid="uid://c6mjyx1s013bd" path="res://user-interface/oxygen-bar/oxygen_bar_under.png" id="2_p6px7"]
[ext_resource type="Texture2D" uid="uid://dgw3g5hac852f" path="res://user-interface/oxygen-bar/oxygen_bar_progress.png" id="3_1yhug"]
[ext_resource type="FontFile" uid="uid://ds6n614auqiiw" path="res://user-interface/fonts/font_1.ttf" id="4_mw3sv"]

[node name="OxygenBar" type="Node2D"]
position = Vector2(128, 127)
script = ExtResource("1_77erm")

[node name="TextureProgress" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -5.0
offset_right = 50.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_right = 4
texture_under = ExtResource("2_p6px7")
texture_progress = ExtResource("3_1yhug")

[node name="Label" type="Label" parent="TextureProgress"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -11.5
offset_right = 29.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.12549, 0.0823529, 0.2, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_mw3sv")
theme_override_font_sizes/font_size = 8
text = "Oxygen"
horizontal_alignment = 1
vertical_alignment = 2

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
